@@ -1,5 +1,10 @@
 ChangeLog for the Astro project.
 
+20201227:
+	* move configuration database into a subdirectory so that we can
+	  give the subdirectory to the owner
+	* move the snowstar.service script to the right place
+
 20201226:
 	* many portability fixes to get rid of compiler warnings
 	* fix the liusb_set_debug deprecation, we now require that libusb be
